--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -20,6 +20,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
+    <script type="text/javascript" src="js/translations.js"></script>
     <script type="text/javascript" src="https://unpkg.com/parse/dist/parse.min.js"></script>
     <script type="text/javascript" src="js/userManagment.js"></script>
 
@@ -34,7 +35,6 @@
     </div>
 
     <div id="contentWrapper">
-
         <div id="headerWrapper">
             <div id="header">
                 <h1>MovieInfo</h1>
@@ -246,17 +246,17 @@
         </div>
     </div>
 
-        <!-----------No Favorites--------->
-        <div id="noFavoritesPop" class="popUpInfo">
-            <div class="popupCont">
-                <div class="Xbtn"></div>
-                <h2>No Favorites</h2>
-                <p>Add Some Favorites Movies / TV Shows To Your List</p>
-                <div class="popupBtnsWrapper">
-                    <button class="popupBtn" id="" onclick="closeCurrentPopup($(this))">Close </button>
-                </div>
+    <!-----------No Favorites--------->
+    <div id="noFavoritesPop" class="popUpInfo">
+        <div class="popupCont">
+            <div class="Xbtn"></div>
+            <h2>No Favorites</h2>
+            <p>Add Some Favorites Movies / TV Shows To Your List</p>
+            <div class="popupBtnsWrapper">
+                <button class="popupBtn" id="" onclick="closeCurrentPopup($(this))">Close </button>
             </div>
         </div>
+    </div>
 
     <!-----------Change Username--------->
     <div id="changeUsernamePop" class="popUpInfo">
